# static-curl-openssl

./: Android.mk  CMakeLists.txt  README.md
